add .gitignore file and the list of ignore

--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/julien-Lachaux/webScrapper/issues"
   },
-  "homepage": "https://github.com/julien-Lachaux/webScrapper#readme"
+  "homepage": "https://github.com/julien-Lachaux/webScrapper#readme",
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "dotenv": "^6.0.0",
+    "fs": "0.0.1-security",
+    "node-cron": "^2.0.1",
+    "path": "^0.12.7",
+    "puppeteer": "^1.8.0",
+    "request": "^2.88.0"
+  }
 }
