--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "webscrapper",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/demo.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel -d ./build ./src",
+    "dev": "babel-watch src/webScrapper.js",
+    "demo": "babel-watch src/demo.js",
+    "build": "npm run clean && npm run build-babel",
+    "start": "node ./build/webScrapper.js",
+    "test": "echo \"no test specified !\"",
+    "production": "git pull && npm run build && forever start build/main.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +31,16 @@
     "path": "^0.12.7",
     "puppeteer": "^1.8.0",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.2",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-watch": "^2.0.7"
   }
 }
