--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
   },
   "homepage": "https://github.com/julien-Lachaux/webScrapper#readme",
   "dependencies": {
-    "babel-cli": "^6.26.0",
+    "@julien-lachaux/jsoncache": "^1.0.0",
     "dotenv": "^6.0.0",
     "fs": "0.0.1-security",
+    "moment": "^2.22.2",
     "node-cron": "^2.0.1",
     "path": "^0.12.7",
     "puppeteer": "^1.8.0",
     "request": "^2.88.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.2",
     "babel-plugin-module-resolver": "^3.1.1",
