--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webscrapper",
+  "name": "@julien-lachaux/webscrapper",
   "version": "1.0.0",
   "description": "",
   "main": "build/demo.js",
